subscription requires available resources info and min price
